--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@types/node": "^16.3.2",
     "lerna": "^4.0.0"
   },
   "scripts": {
