--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stxphxn/dissertation",
+  "name": "contracts",
   "description": "Gnosis Safe Escrow Module",
   "version": "1.0.0",
   "author": {
