--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -18,6 +18,7 @@
     "@ethersproject/providers": "^5.1.2",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/contracts": "^4.3.1",
     "@typechain/ethers-v5": "^7.0.0",
     "@typechain/hardhat": "^2.0.1",
     "@types/chai": "^4.2.18",
@@ -78,8 +79,5 @@
     "prettier:check": "prettier --check --config .prettierrc \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
     "typechain": "hardhat typechain"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.1.0"
   }
 }
