--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "lerna bootstrap"
   },
   "dependencies": {
-    "ethers": "^5.4.3"
+    "ethers": "^5.4.3",
+    "typescript": "^4.4.4"
   }
 }
