API: add workers kv namespaces to config

--- a/packages/api/wrangler.toml
+++ b/packages/api/wrangler.toml
@@ -4,6 +4,10 @@ zone_id = ""
 account_id = "70b6d283d17368dca5d5613c762ffdb4"
 route = ""
 workers_dev = true
+kv_namespaces = [
+  { binding = "SELLERS_DB", id = "02318cee2f444ee1a56bc5871c14b14a" },
+  { binding = "SWAPS_DB", id = "0666c50bab8d48aa9721678ce049db2c" }
+]
 
 [build]
 command = "npm install && npm run build"
