--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "contracts",
-  "description": "Gnosis Safe Escrow Module",
+  "name": "@rails/contracts",
+  "description": "Rails Escrow Contracts",
   "version": "1.0.0",
   "author": {
     "name": "Stephen Horsfall",
@@ -11,6 +11,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@ethersproject/abi": "^5.1.2",
+    "@ethersproject/abstract-provider": "^5.5.1",
     "@ethersproject/abstract-signer": "^5.1.0",
     "@ethersproject/bignumber": "^5.1.1",
     "@ethersproject/bytes": "^5.1.0",
@@ -19,7 +20,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.1",
-    "@typechain/ethers-v5": "^7.0.0",
+    "@typechain/ethers-v5": "^8.0.1",
     "@typechain/hardhat": "^2.0.1",
     "@types/chai": "^4.2.18",
     "@types/fs-extra": "^9.0.11",
@@ -33,8 +34,8 @@
     "dotenv": "^9.0.2",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
-    "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.1.4",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.1",
     "fs-extra": "^10.0.0",
     "hardhat": "^2.3.0",
     "hardhat-gas-reporter": "^1.0.4",
@@ -48,7 +49,7 @@
     "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
     "ts-node": "^9.1.1",
-    "typechain": "^5.0.0",
+    "typechain": "^6.0.2",
     "typescript": "^4.2.4"
   },
   "files": [
