--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lerna": "^4.0.0"
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap --force-local"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
