--- a/packages/contracts/.gitignore
+++ b/packages/contracts/.gitignore
@@ -1,25 +1,35 @@
-# folders
-
-.coverage_artifacts/
-.coverage_cache/
-.coverage_contracts/
+# directories
 .yarn/*
+!.yarn/patches
 !.yarn/releases
 !.yarn/plugins
-artifacts/
-build/
-cache/
-coverage/
-dist/
-lib/
-node_modules/
-bin/*
+!.yarn/sdks
+!.yarn/versions
+**/artifacts
+**/build
+**/cache
+**/coverage
+**/.coverage_artifacts
+**/.coverage_cache
+**/.coverage_contracts
+**/dist
+**/node_modules
 
 # files
 *.env
 *.log
-*.tsbuildinfo
+.pnp.*
 coverage.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# types
+src/types/*
+!src/types/common.ts
+!src/types/Greeter.ts
+
+# factories
+!src/types/factories
+src/types/factories/*
+!src/types/factories/Greeter__factory.ts
