--- a/packages/api/wrangler.toml
+++ b/packages/api/wrangler.toml
@@ -8,11 +8,13 @@ kv_namespaces = [
   { binding = "SELLERS_DB", id = "02318cee2f444ee1a56bc5871c14b14a", preview_id = "90a85c37f62249bfa6e9d0e39b7c08d5" },
   { binding = "SWAPS_DB", id = "0666c50bab8d48aa9721678ce049db2c", preview_id = "22430973ad694da297c6ff895d9eb875" }
 ]
-[vars]
-YAPILY_KEY = ''
-YAPILY_SECRET = ''
-MNEMONIC = ''
+
 [build]
 command = "npm install && npm run build"
 [build.upload]
 format = "service-worker"
+# [secrets]
+# YAPILY_KEY
+# YAPILY_SECRET
+# MNEMONIC
+# INFURA_API_KEY
