--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tkey/default": "^4.0.3",
     "@tkey/service-provider-torus": "^4.0.2",
     "@toruslabs/torus-direct-web-sdk": "^4.14.0",
+    "@vuex-orm/core": "^1.0.0-draft.16",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "ethers": "^5.3.0",
@@ -21,7 +23,8 @@
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
