--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,9 +14,10 @@
     "@tkey/service-provider-torus": "^4.0.2",
     "@toruslabs/torus-direct-web-sdk": "^4.14.0",
     "@vuex-orm/core": "^1.0.0-draft.16",
+    "@rails/contracts": "1.0.0",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
-    "ethers": "^5.3.0",
+    "ethers": "^5.5.1",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
