--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,12 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@rails/contracts": "1.0.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tkey/default": "^4.0.3",
     "@tkey/service-provider-torus": "^4.0.2",
     "@toruslabs/torus-direct-web-sdk": "^4.14.0",
     "@vuex-orm/core": "^1.0.0-draft.16",
-    "@rails/contracts": "1.0.0",
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "ethers": "^5.5.1",
@@ -46,6 +46,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
+    "naive-ui": "^2.23.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
