--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^9",
     "core-js": "^3.6.5",
     "ethers": "^5.5.1",
+    "naive-ui": "^2.23.2",
     "postcss": "^7",
     "register-service-worker": "^1.7.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
