--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --force-local",
+    "start:node": "lerna run --scope @rails/contracts node --npm-client=yarn",
     "deploy:contracts": "lerna run --scope @rails/contracts deploy --npm-client=yarn",
-    "deploy:api": "lerna run --scope @rails/api deploy --npm-client=yarn",
-    "deploy": "deploy:contracts & deploy:api"
+    "start:api": "lerna run --scope @rails/api deploy --npm-client=yarn",
+    "deploy": "deploy:contracts & start:api"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2",
